[package]
name = "hello"
version = "0.1.0"
edition = "2021"
authors = ["Borja Garcia <bgarcia@rti.com>"]
description = "A project to show off the usage of Connext Pro from Rust."

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"

[profile.dev]
rpath = true

[workspace]
members = ["rticonnext-sys"]